styles.css
/* ... */
@keyframes pulse {
    from { transform: scale(1); }
    to { transform: scale(1.1); }
}

.content-wrapper {
    display: flex;
    justify-content:center;
    align-items: center;
    height: 100%;
    max-height: 1000px;
}

.container {
    background: var(--box-background);
    padding: clamp(20px, 3vw, 50px);
    text-align: center;
    border-radius: clamp(10px, 2vw, 30px);
    border: 1px solid rgba(0, 0, 0, 0.14);
    box-shadow: 0px 8px 20px var(--shadow-color);
    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
    animation: float 8s ease-in-out 1 forwards;
    z-index: 4;    
}

h1 {
    font-family: 'Lora', serif;
    color: var(--text-color);
    font-size: var(--text-hero);
}

h2 {
    font-family: 'Lora', serif;
    color: var(--text-color);
    font-size: clamp(16px, 4vw, 32px);
    text-decoration: none;
    animation: pulse 1s infinite alternate;
}

p {
    color: var(--text-color);
    line-height: 1.6;
    font-size: var(--text-base);
}

.footer {
    position: fixed;
    bottom: 10px;
    width: 100%;
    text-align: center;
    font-size: 12px;
    color: var(--text-color);
    opacity: 0.5;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
    z-index: 5;
}

.footer a {
    text-decoration: none;    
    color: var(--text-color);
    font-weight: bold;
    transition: color 0.3s ease-in-out;  
    cursor: pointer;
}

.footer a:hover {
    color: var(--button-hover);
    opacity: 1;
}

.logo-button {
    position: fixed;
    top: 15px;
    right: 20px;
    display: flex;
    width: clamp(12px, 5vw, 50px);
    height: auto;
    border: none;
    cursor: pointer;
    justify-content: center;
    align-items: center; 
    z-index: 5;
}

.logo-button img {
    width: 100%;
    height: auto;
    filter: var(--svg-filter);
    transition: transform 0.3s ease-in-out;
}

.logo-button img:hover {
    transform: scale(1.1);
}

.menu-button {
    position: fixed;
    top: 10px;
    left: 15px;
    font-size: clamp(12px, 5vw, 50px);
    background: none;
    border: none;
    cursor: pointer;
    color: var(--text-color);
    transform: scale(1);
    z-index: 5;
}

.menu-button:hover {
    transform: scale(1.1);
    transition: transform 0.3s ease-in-out;
}

.menu-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
    display: flex;
    justify-content: center;
    align-items: center;
    transform: translateX(-100%);
    transition: transform 0.3s ease-in-out;
    z-index: 10;
}

.menu-overlay.show {
    transform: translateX(0);
}

.menu-content {
    text-align: center;
}

.menu-content a {
    display: block;
    color: var(--text-color);
    font-size: clamp(16px, 4vw, 32px);
    line-height: clamp(24px, 6vw, 48px);
    text-decoration: none;
    margin-bottom: clamp(10px, 2vw, 20px);
    transition: text-decoration 0.3s ease-in-out;
}

.menu-content a:hover,
.menu-content a:active {
    text-decoration: underline;
}
.modal-close,
.close-menu {
    position: absolute;
    top: clamp(15px, 4.5vw, 60px);
    right: clamp(15px, 4.5vw, 60px);
    font-size: clamp(24px, 6vw, 48px);
    background: none;
    border: none;
    cursor: pointer;
    color: var(--text-color);
    z-index: 1000;
}

.gallery {
    gap: clamp(10px, 2vw, 30px);
    padding: clamp(10px, 2vw, 30px); 
    justify-content: center;
    transition: transform 0.5s ease-in-out;
    position: relative;
    width: 100%;
    height: auto;
    box-sizing: border-box;
    
}

.gallery-navigation {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.nav-arrow {
    display: flex;
    justify-content: center;
    align-items: center;
    width: clamp(30px, 8vw, 75px);
    height: clamp(30px, 8vw, 75px);
    background: none;
    color: var(--text-color);
    font-size: clamp(20px, 4vw, 40px);
    cursor: pointer;
    border-radius: 50%;
    border: 2px solid var(--text-color);
    transform: scale(1);
    line-height: 1;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.nav-arrow:hover {
    background: none;
    transform: scale(1.3);
}

.gallery-wrapper {
    position: relative;
    width: 100%;
    overflow: hidden;
    padding-bottom: 10px;
}

.gallery-set {
    width: 100%;
    display: none;
    grid-template-columns: repeat(2, 1fr);
    gap: clamp(10px, 2vw, 30px);
}

.gallery-set.active {
    display: grid;
}

.gallery img {
    width: 100%;
    height: auto;
    border-radius: clamp(4px, 1vw, 8px);
    transition: transform 0.3s cubic-bezier(0.35, -0.95, 0.50, 1.05);
    max-width: 250px;
    cursor: pointer;
}

.gallery img:hover {
    transform: scale(1.1);
}

.social-icons {
    display: inline-flex;
    align-items: center;
    gap: clamp(10px, 2vw, 30px);
}

.instagram-logo,
.facebook-logo {
    filter: var(--svg-filter);
    display: inline-block;
    width: clamp(40px, 10vw, 128px);
    height: clamp(40px, 10vw, 128px);
    transition: transform 0.3s ease-in-out;
    cursor: pointer;
}

.instagram-logo:hover {
    animation: pulse 0.6s ease-in-out infinite alternate;
}

.facebook-logo:hover {
    animation: pulse 0.6s ease-in-out infinite alternate;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    justify-content: center;
    align-items: center;
}
.modal img {
    max-width: 90%;
    max-height: 90%;
    border-radius: 10px;
}

.header-row {
    display: flex;
    justify-content: space-around;
    gap: clamp(10px, 6vw, 60px);
    cursor: pointer;
    transition: transform 0.3s ease-in-out, text-decoration 0.3s ease-in-out;
}

.header-row h2:hover {
    text-decoration: underline;
    transform: scale(1.1);
}

.aftercare-content {
    display: none;
}

.aftercare-content.active {
    display: block;
}

#instructions {
    margin-bottom: clamp(5px, 1vw, 10px);
}
/* ... */

